inspection improvements